--- a/src/data/projects.yaml
+++ b/src/data/projects.yaml
@@ -1,18 +1,18 @@
 - title: Gatsby-Minimal-Portfolio
   image: https://maedahbatool.com/wp-content/uploads/2017/08/The-new-bluehost.jpg
   link: https://github.com/Mr404Found/Qr-Code-Application
-- title: Gatsy-Memeto_Blogpost
-  image: https://codingthesmartway.com/wp-content/uploads/2019/01/gatsby_course_title_text_brandnew-1.png
-  link: https://github.com/Mr404Found/Qr-Code-Application
+- title: Your-Project-Name
+  image: https://images7.alphacoders.com/679/thumb-1920-679140.png
+  link: /projects
 - title: Dreamy-Keanu-Gallery
   image: https://redwerk.com/wp-content/uploads/2019/10/f-image.png
   link: https://github.com/Mr404Found/Qr-Code-Application
 - title: Gatsby-Dynamic-Pages
-  image: https://images.wallpaperscraft.com/image/code_letters_screen_137590_1920x1080.jpg
+  image: http://getwallpapers.com/wallpaper/full/0/0/b/14916.jpg
   link: https://github.com/Mr404Found/Qr-Code-Application
-- title: Your-Project-Name
-  image: https://images.wallpaperscraft.com/image/code_letters_screen_137590_1920x1080.jpg
-  link: /projects
 - title: Qr-Code-Application
-  image: https://images.wallpaperscraft.com/image/code_letters_screen_137590_1920x1080.jpg
+  image: https://redwerk.com/wp-content/uploads/2019/10/f-image.png 
+  link: https://github.com/Mr404Found/Qr-Code-Application
+- title: Gatsy-Memeto_Blogpost
+  image: https://codingthesmartway.com/wp-content/uploads/2019/01/gatsby_course_title_text_brandnew-1.png
   link: https://github.com/Mr404Found/Qr-Code-Application
